# openclaw-bioinfor

./: .env.example  .gitignore  CLAUDE.md  README.md  mcp_config.json  pyproject.toml  requirements.txt
agents/data_agent/: MEMORY.md  SOUL.md  active_context.md  data_pipeline.py
agents/model_agent/: MEMORY.md  SOUL.md  active_context.md
agents/research_agent/: MEMORY.md  SOUL.md  active_context.md
agents/scout_agent/: MEMORY.md  SOUL.md  active_context.md
agents/watcher/: MEMORY.md  SOUL.md  active_context.md
deploy/: harness_tool_map.remote.json
docs/: REMOTE_DEPLOYMENT_RUNBOOK.md
document/: BioOpenClaw_Implementation_Prompts.md  BioOpenClaw_v0.2_优化设计文档.docx  BioOpenClaw_v0.2_优化设计文档_updated.docx  BioOpenClaw_v0.3_持久化记忆系统设计.md  DataAgent_Standalone_Design.md  Related_Work_Report_AutoResearch_OpenClawRL_Agentomics.md
mcp_server/: server.py
openclaw_configs/data_agent/: system_prompt.md
openclaw_configs/main/: system_prompt.md
openclaw_configs/model_agent/: system_prompt.md
openclaw_configs/research_agent/: system_prompt.md
openclaw_configs/scout_agent/: system_prompt.md
openclaw_configs/watcher/: system_prompt.md
scripts/: __init__.py  daily_log_archive.py  generate_remote_configs.py  inbox_dispatch.py  memory_consistency_check.py  memory_flush.py  memory_rotate.py  prepare_runtime_layout.py  run_agent_smoke_tests.py  run_cross_agent_e2e_check.py  run_harness_smoke.py  scout_scan.py  start_all_servers.py  sync_openclaw_prompts.py  test_mcp_connection.py
shared_memory/: _index.md  conventions.md  known_issues.md
tests/: conftest.py
(+118 files in other folders)
